--- a/package.json
+++ b/package.json
@@ -19,9 +19,7 @@
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
-    "migration:run": "ts-node --transpile-only ./node_modules/typeorm/cli.js migration:run",
-    "migration:revert": "ts-node --transpile-only ./node_modules/typeorm/cli.js migration:revert",
-    "migration:generate": "ts-node --transpile-only ./node_modules/typeorm/cli.js migration:generate"
+    "typeorm": "ts-node --transpile-only ./node_modules/typeorm/cli.js"
   },
   "dependencies": {
     "@nestjs/common": "^8.0.0",
